fix image-cropper

--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,10 @@
 }
 
 .image-cropper {
-    width: 100px;
-    height: 100px;
+    width: 7vw;
+    height: 7vw;
+    max-width: 100px;
+    max-height: 100px;
     position: relative;
     overflow: hidden;
     -webkit-border-radius: 50%;
@@ -28,38 +30,13 @@ img {
     width: auto;
 }
 
-/*.food-photo {*/
-    /*margin-bottom: 1em;*/
-/*}*/
-
-/*#select-container select {*/
-    /*margin-bottom: 1em;*/
-/*}*/
-
-/*.image-cropper {*/
-    /*!*margin: 1em;*!*/
-    /*width: 100%;*/
-    /*!*height: 100px;*!*/
-    /*position: relative;*/
-    /*overflow: hidden;*/
-    /*-webkit-border-radius: 50%;*/
-    /*-moz-border-radius: 50%;*/
-    /*-ms-border-radius: 50%;*/
-    /*-o-border-radius: 50%;*/
-    /*border-radius: 50%;*/
-/*}*/
-
-/*img {*/
-    /*display: inline;*/
-    /*margin: 0 auto;*/
-    /*height: 100%;*/
-    /*width: auto;*/
-/*}*/
-
 .thumbnail-container {
     display: inline-block;
-    margin-top: 20px;
+    /*margin-top: 20px;*/
     margin-right: 10px;
-    max-width: 9%;
     vertical-align: top;
+}
+
+.form-control + .btn-block {
+    margin-top: 5px;
 }
